# pong

./: .clangd  .gitignore  CMakeLists.txt  README.md  run.sh  tmux.sh
.github/workflows/: ci.yaml
include/glad/: gl.h
src/: game.cpp  game.hpp  gl.c  gl.hpp  global.hpp  gltypes.hpp  key.cpp  key.hpp  logger.cpp  logger.hpp  main.cpp  mathtypes.hpp  shader.cpp  shader.hpp
src/component/: paddle.hpp  physics.hpp  rect.hpp  string.hpp
src/graphics/: gltypes.hpp  shader.hpp  texture.hpp
src/render/: text.hpp
src/renderer/: rect.cpp  rect.hpp  string.cpp  string.hpp
src/scenes/: main.cpp  scene.cpp  scene.hpp
src/systems/: ball.hpp  paddle.hpp  physics.hpp  score.hpp
